1.make proactors have their own thread; 2.fd must be created by proactor(auto attach or set non blocking)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ add_library(${PROJECT_NAME} STATIC
     "src/executor/simple_executor.cpp"
     "src/proactor/select.cpp"
     "src/task.cpp"
- )
+  "include/bco/utils.h")
 
  if(WIN32)
  target_link_libraries(${PROJECT_NAME}
