1.add exception; 2.update clang-format; 3.linux compatiable; 4.add epoll(not finished)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,6 @@ set(CMAKE_CXX_STANDARD 20)
 
 if(WIN32)
 add_definitions(-DNOMINMAX)
-#add_compile_options(/await)
 set(PLAT_SPEC
     "include/bco/net/proactor/iocp.h"
     "src/net/proactor/iocp.cpp"
@@ -14,7 +13,10 @@ set(PLAT_SPEC
 else()
 add_compile_options(-fcoroutines)
 set(PLAT_SPEC
-    "include/bco/detail/proactor_linux.h"
+    "include/bco/net/proactor/epoll.h"
+    "include/bco/net/proactor/iouring.h"
+    "src/net/proactor/epoll.cpp"
+    "src/net/proactor/iouring.cpp"
     )
 endif()
 
@@ -35,7 +37,8 @@ add_library(${PROJECT_NAME} STATIC
     "include/bco/net/socket.h"
     "include/bco/net/proactor/select.h"
     "src/net/proactor/select.cpp"
- "include/bco/net/event.h" "src/net/event.cpp")
+    "include/bco/net/event.h"
+    "src/net/event.cpp")
 
  if(WIN32)
  target_link_libraries(${PROJECT_NAME}
@@ -43,6 +46,9 @@ add_library(${PROJECT_NAME} STATIC
     "mswsock.lib"
  )
  else()
+ target_link_libraries(${PROJECT_NAME}
+    "pthread"
+ )
  endif()
 
 target_include_directories(${PROJECT_NAME}
