--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ add_library(${PROJECT_NAME} STATIC
     "src/buffer.cpp"
     "src/common.h"
     "src/common.cpp"
-    "src/utils.cpp")
+    "src/utils.cpp" "src/magic.h")
 
  if(WIN32)
  target_link_libraries(${PROJECT_NAME}
